--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.11.0",
+    "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
