--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 NEXT_PUBLIC_APP_NAME=valideria
 NEXT_PUBLIC_APP_DESCRIPTION=Prostore is your one-stop online shop for the latest electronics, fashion, and home essentials. Enjoy fast shipping, secure checkout, and unbeatable deals every day.
+# NEXT_PUBLIC_SERVER_URL=http://127.0.0.1:8000
+# LARAVEL_PUBLIC_SERVER_URL=http://127.0.0.1:8000
+# LARAVEL_PUBLIC_SERVER_URL_IMAGES=http://127.0.0.1:8000/storage
+# LARAVEL_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api/
 
 NEXT_PUBLIC_SERVER_URL=https://backend.valideria.com/
 LARAVEL_PUBLIC_SERVER_URL=https://backend.valideria.com/
