--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_APP_NAME=valideria
-NEXT_PUBLIC_APP_DESCRIPTION=Prostore is your one-stop online shop for the latest electronics, fashion, and home essentials. Enjoy fast shipping, secure checkout, and unbeatable deals every day.
+NEXT_PUBLIC_APP_DESCRIPTION=Valideria is a leading multi-vendor online marketplace for pharmacies, offering a wide selection of medicines, drugs, cosmetics, and healthcare products. Shop trusted brands, compare prices, and enjoy fast, secure delivery across the region. Valideria connects you to licensed pharmacies for all your health and wellness needs.
 # NEXT_PUBLIC_SERVER_URL=http://127.0.0.1:8000
 # LARAVEL_PUBLIC_SERVER_URL=http://127.0.0.1:8000
 # LARAVEL_PUBLIC_SERVER_URL_IMAGES=http://127.0.0.1:8000/storage
@@ -13,5 +13,8 @@ LARAVEL_PUBLIC_API_BASE_URL=https://backend.valideria.com/api/
 
 NEXTAUTH_SECRET="z/YXsC5Y4fA4UDUI4tpYGv1wr4ZG0Xf+6Mkq+1FPwuk="
 
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_URL_INTERNAL="http://localhost:3000"
+# NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL_INTERNAL="http://localhost:3000"
+
+NEXTAUTH_URL="https://valideria.com"
+NEXTAUTH_URL_INTERNAL="https://valideria.com"
